# jucyaudio

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.md  jucyaudio.jucer  justfile  prompt.md  setenv.zsh
Audio/: AudioLibrary.h  ExportMixImplementation.cpp  ExportMixImplementation.h  ExportMixToMp3.cpp  ExportMixToMp3.h  ExportMixToWav.cpp  ExportMixToWav.h  MixExporter.cpp  MixExporter.h  MixProjectLoader.cpp  MixProjectLoader.h
Audio/Includes/: IMixExporter.h
Config/: config_backend.h  section.cpp  section.h  toml_backend.h  typed_value.h  typed_vector_value.h  value_interface.h
Database/: BackgroundService.cpp  BackgroundService.h  TrackLibrary.cpp  TrackLibrary.h  TrackScanner.cpp  TrackScanner.h
Database/BackgroundTasks/: BpmAnalysis.cpp  BpmAnalysis.h
Database/Includes/: Constants.h  DataColumn.h  FolderInfo.h  IBackgroundTask.h  IFolderDatabase.h  ILongRunningTask.h  IMixManager.h  INavigationNode.h  IRefCounted.h  ITagManager.h  ITrackDatabase.h  ITrackInfoScanner.h  IWorkingSetManager.h  MixInfo.h  TrackInfo.h  TrackQueryArgs.h
Database/Nodes/: BaseNode.cpp  BaseNode.h  LibraryNode.cpp  LibraryNode.h  LogicalFolderNode.cpp  LogicalFolderNode.h  MixNode.cpp  MixNode.h  MixesOverview.cpp  MixesOverview.h  RootNode.cpp  RootNode.h  TypedContainerNode.h  TypedItemsOverview.h  TypedOverviewNode.h  WorkingSetNode.cpp  WorkingSetNode.h  WorkingSetsOverview.cpp  WorkingSetsOverview.h
Database/Scanners/: AubioScanner.cpp  AubioScanner.h  Id3TagScanner.cpp  Id3TagScanner.h
Database/Sqlite/: SqliteDatabase.cpp  SqliteDatabase.h  SqliteFolderDatabase.cpp  SqliteFolderDatabase.h  SqliteMixManager.cpp  SqliteMixManager.h  SqliteStatement.cpp  SqliteStatement.h  SqliteStatementConstruction.cpp  SqliteStatementConstruction.h  SqliteTagManager.cpp  SqliteTagManager.h  SqliteTrackDatabase.cpp  SqliteTrackDatabase.h  SqliteTransaction.cpp  SqliteTransaction.h  SqliteWorkingSetManager.cpp  SqliteWorkingSetManager.h
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
Themes/: default_dark.toml  light.toml
UI/: ColumnConfiguratorDialog.cpp  ColumnConfiguratorDialog.h  CreateMixDialogComponent.cpp  CreateMixDialogComponent.h  CreateWorkingSetDialogComponent.cpp  CreateWorkingSetDialogComponent.h  DataViewComponent.cpp  DataViewComponent.h  DividerComponent.cpp  DividerComponent.h  DynamicColumnManager.cpp  DynamicColumnManager.h  DynamicToolbarComponent.cpp  DynamicToolbarComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainPlaybackAndStatusComponent.cpp  MainPlaybackAndStatusComponent.h  MenuManager.cpp  MenuManager.h  MenuPresenter.cpp  MenuPresenter.h  MixEditorComponent.cpp  MixEditorComponent.h  MixTrackComponent.cpp  MixTrackComponent.h  NavigationPanelComponent.cpp  NavigationPanelComponent.h  PlaybackController.cpp  PlaybackController.h  PlaybackToolbarComponent.cpp  PlaybackToolbarComponent.h  ScanDialogComponent.cpp  ScanDialogComponent.h  Settings.cpp  Settings.h  TaskDialog.cpp  TaskDialog.h  ThemeManager.cpp  (+3 more)
Utils/: AssortedUtils.cpp  AssortedUtils.h  StringWriter.cpp  StringWriter.h  UiUtils.cpp  UiUtils.h
